[package]
name = "ist"
version = "0.1.0"
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Lists the contents of a directory."
documentation = "https://docs.rs/ist"
homepage = "https://github.com/arzg/ist"
repository = "https://github.com/arzg/ist"

[dependencies]
anyhow = "1"
structopt = "0.3"
